@@ -1,5 +1,8 @@
 2013-12-30  Allen D. Ball  <ball@10-0-1-2.lan>
 
+	* src/main/java/iprotium/upnp/ssdp/SSDPDiscoveryThread.java:
+	Added ping() method and made interval member protected.
+
 	* src/main/java/iprotium/upnp/ssdp/SSDPMessage.java:
 	Changed Impl.getLocation(SSDPMessage) to use AL if
 	HttpHeaders.LOCATION is not set.
